<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/rlTimePickerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <com.sardari.daterangepicker.customviews.CustomTextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_time_picker"
            android:textColor="@color/default_date_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.sardari.daterangepicker.customviews.CustomTextView
            android:id="@+id/tvHeaderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/default_date_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.sardari.daterangepicker.customviews.CustomTextView
            android:id="@+id/tvHeaderDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/done"
            android:textColor="@color/default_date_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTimePickerContainer"
        android:gravity="center">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numbersTextColor="@color/calendar_text"
            android:timePickerMode="spinner">

        </TimePicker>

    </RelativeLayout>

</RelativeLayout>